# gpcs

./: CMakeLists.txt  README.md  coreconfig.xml  install_script.sh
Demo/: CMakeLists.txt  main.cpp
gpcskernel/: CMakeLists.txt
gpcskernel/config/: coreconfig.xml
gpcskernel/include/: commoncommand.h  funcdummy.h  gpcsserver.h  session.h  tasktuple.h
gpcskernel/src/: gpcskernel.cpp  gpcsserver.cpp  session.cpp
gpcsnode/: CMakeLists.txt
gpcsnode/include/: gpcsmat.h  session.h
gpcsnode/src/: gpcsnode.cpp  session.cpp
